Практикуемся в написании API автотестов. Часть 3. Практика написания API автотестов для работы с заданиями. Создание задания

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,4 @@ markers =
     authentication: Маркировка для тестов, связанных с аутентификацией.
     files: Маркировка для тестов, связанных с файлами.
     courses: Маркировка для тестов, связанных с курсами.
+    exercises: Маркировка для тестов, связанных с упражнениями.
